--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive_flutter: ^1.1.0
   build_runner: ^2.4.6
   go_router: ^10.1.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
